2006-04-24  Bruno coudoin  <bruno.coudoin@free.fr>

	Fixes Dutch alphabet by Hans de Goede

	* boards/sounds/nl/alphabet/U006A.ogg:
	* boards/sounds/nl/alphabet/U006B.ogg:
	* boards/sounds/nl/alphabet/U006C.ogg:
	* boards/sounds/nl/alphabet/U006D.ogg:
	* boards/sounds/nl/alphabet/U006E.ogg:
	* boards/sounds/nl/alphabet/U006F.ogg:
	* boards/sounds/nl/alphabet/U007B.ogg:
	* boards/sounds/nl/alphabet/U007C.ogg:
	* boards/sounds/nl/alphabet/U007D.ogg:
	* boards/sounds/nl/alphabet/U007E.ogg:
	* boards/sounds/nl/alphabet/U007F.ogg:
	* boards/sounds/nl/alphabet/gcompris_alphabet_nl.assetml.in:
	* boards/sounds/nl/misc/check_answer.ogg:
	* boards/sounds/nl/misc/gcompris_misc_nl.assetml.in:
	* docs/C/Makefile.am:
	* docs/C/gcompris.6: added the man from debian
	* src/boards/python/electric.py: fixes a potential vunerability by
	not using /tmp. Fixed the delete button that was freezing GCompris
	when used on an empty 2nd level.

2006-04-18  Bruno coudoin  <bruno.coudoin@free.fr>

	* Makefile.mingw: updated for 7.4 windows
	* boards/images/README:
	* boards/images/enumerate_background.png: Remade by by Herve Chanal.
	* src/boards/click_on_letter.c: (start_board), (end_board),
	(sounds_are_fine), (click_on_letter_create_item), (conf_ok): now sounds is muted
	* src/boards/memory.c: (start_board): added a dialog when sounds is not activated that the activity cannot be played.

2006-04-17  Bruno coudoin  <bruno.coudoin@free.fr>

	reviewed by: <delete if not using a buddy>

	* Makefile.mingw:
	* boards/images/README:
	* boards/images/enumerate_background.png:
	* po/fr.po:
	* src/boards/click_on_letter.c: (start_board), (end_board),
	(sounds_are_fine), (click_on_letter_create_item), (conf_ok):
	* src/boards/memory.c: (start_board):

	*** Release 7.4 ***

2006-04-10  Bruno coudoin  <bruno.coudoin@free.fr>

	Added scroolbars in the help dialogs.
	Added an entry in skin.c to get a GdkColor : gcompris_skin_get_gdkcolor()