@@ -51,7 +51,7 @@ urpmi libgnomecanvas2_0-devel libgdk_pixbuf2.0_0-devel
 urpmi libgnomeui2_0-devel
 urpmi libSDL_mixer1.2-devel libSDL1.2-devel 
 urpmi python-gtk-devel gnome-python-canvas
-urpmi libpython2.3-devel
+urpmi libpython2.4-devel
 urpmi pygtk2.0-devel
 urpmi texinfo
 urpmi texi2html
